--- a/Dash/Dash.html
+++ b/Dash/Dash.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
+//page d'accueil
 
-<div class="Test">
+<div class="Header">
     <h1>Félix PERREAU</h1>
-    <img src="image.jpg" alt="image" class="img-thumbnail">
-
-<div class="container">
-    <div class="row">
-      <div class="col-sm-3">
-        Expériences assos
-      </div>
-      <div class="col-sm-9">
-        Formation
-      </div>
+    <img src="jam logo police 1 nettoye a la main.png" alt="image" class="img-thumbnail">
     </div>
-  </div>
 
-  <script src="exemple.js"></script>
+  <script src="Dash.js"></script>
+
+  <div class="main-container">
+    <header class="header header-6">
+    </header>
+    <div class="content-container">
+        <div class="content-area">
+        </div>
+    </div>
+</div>
